<resources>
    <string name="app_name">InfoGames</string>
    <string name="welcome_title">Готов поиграть в информатику?</string>
    <string name="play">Играть</string>
    <string name="learn">Учиться</string>
    <string name="start_test">Начать тестирование</string>
    <string name="finish_test">Закончить тест</string>
    <string name="review">Оценить материал</string>
    <string name="answer_holder">Ответ</string>
    <string name="question_holder">Вопрос</string>
    <string name="question_count">0/0</string>
    <string name="score">Score</string>
    <string name="profile_button">Profile button</string>
    <string name="sign_in">Войти</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="email">Email</string>
    <string name="tag">Войти в приложение</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="sign_out">Выйти</string>
    <string name="retype_password">Повторите пароль</string>
    <string name="registration">Регистрация</string>
    <string name="theory">Теория</string>
    <string name="finish_theory">Закончить тему</string>
    <string name="welcome_to_profile">Добро пожаловать в твой профиль!\nДавай узнаем твои лучшие результаты</string>
    <string name="welcome_to_themes">Изучай теорию, проходи тестирования или играй в игры, чтобы заработать очки получить доступ к новым темам!</string>
    <string name="enter_code">ВВЕСТИ КОД</string>
    <string name="finish_game">Закончить игру</string>
    <string name="code">Code</string>
    <string name="welcome_to_games">Выбери интересную тебе игру\n ставь рекорды и зарабатывай очки!</string>
    <string name="game_scheme">Игра "Логическая схема"</string>
    <string name="game_quiz">Игра "Викторина"</string>
    <string name="welcome_scheme">Видишь ворота? На них отображается код, необходимый для их открытия. Вводи коды с помощью схем как можно быстрее. Но будь осторожен, ты можешь ошибиться всего 3 раза</string>
</resources>