<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <include
        layout="@layout/toolbar" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="136dp"
        android:textSize="40sp"
        android:text="@string/app_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:fontFamily="@font/indigo_daisy"/>

    <Button
        android:id="@+id/buttonLearn"
        android:layout_width="225dp"
        android:layout_height="90dp"
        android:layout_marginTop="52dp"
        android:drawableEnd="@drawable/ic_book"
        android:text="@string/learn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/buttonPlay"
        android:layout_width="225dp"
        android:layout_height="90dp"
        android:layout_marginTop="80dp"
        android:drawableEnd="@drawable/ic_controller"
        android:text="@string/play"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLearn" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonPlay"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/fun_computer_200px" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="140dp"
        android:gravity="center|right"
        android:layout_marginEnd="5dp"
        android:textSize="17sp"
        android:layout_height="wrap_content"
        android:text="@string/welcome_title"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintEnd_toStartOf="@+id/imageView4"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView4"
        app:layout_constraintVertical_bias="0.486" />

</androidx.constraintlayout.widget.ConstraintLayout>
