<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".games.MainFragment">


    <Button
        android:id="@+id/buttonSchemeGame"
        android:layout_width="match_parent"
        android:drawableStart="@drawable/ic_logic_128"
        android:drawableEnd="@drawable/ic_logic_128"
        android:layout_height="77dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="20dp"
        android:text="@string/game_scheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <Button
        android:id="@+id/buttonQuizGame"
        android:drawableStart="@drawable/ic_quiz_128"
        android:drawableEnd="@drawable/ic_quiz_128"
        android:layout_width="match_parent"
        android:layout_height="77dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:text="@string/game_quiz"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSchemeGame" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/fun_computer_200px"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewWelcomeGame"
        android:gravity="right|center"
        android:layout_marginEnd="4dp"
        android:layout_width="226dp"
        android:layout_height="140dp"
        android:text="@string/welcome_to_games"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
        app:layout_constraintEnd_toStartOf="@+id/imageView5"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView5"
        app:layout_constraintVertical_bias="0.48" />
</androidx.constraintlayout.widget.ConstraintLayout>